--- a/Admin_Hooks_Vite_Staterkit/package.json
+++ b/Admin_Hooks_Vite_Staterkit/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev": "GENERATE_SOURCEMAP=false vite",
+    "dev": "cross-env GENERATE_SOURCEMAP=false vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
@@ -115,6 +115,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "cross-env": "^7.0.3",
     "sass": "^1.54.9",
     "vite": "^3.1.1"
   },
